Fix sidebar visibility

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -22,7 +22,9 @@
     transition: left 6s ease;
     background: #0B0C40;
 }
-
+.Sidebar.hidden{
+    display: none;
+}
 .hamburger {
     color: white;
     position: fixed;
